--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "kmitl"
     ],
     "license": "ISC",
-    "author": "viruskizz",
+    "author": "Phanuphong Kuharungkitcharoen",
     "dependencies": {},
     "devDependencies": {}
 } 
